chamber join page - fixing layout and horizontal scrolling

--- a/chamber/styles/chamber-large.css
+++ b/chamber/styles/chamber-large.css
@@ -1080,6 +1080,28 @@ body {
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
     z-index: 2;
     width: 400px;
+
+    visibility: hidden;
+    opacity: 0;
+    transition: visibility 0s 0.5s, opacity 0.5s linear;
+}
+
+.modal.show {
+    visibility: visible;
+    opacity: 1;
+    transition-delay: 0s;
+}
+
+.backdrop {
+    visibility: hidden;
+    opacity: 0;
+    transition: visibility 0s 0.5s, opacity 0.5s linear;
+}
+
+.backdrop.show {
+    visibility: visible;
+    opacity: 1;
+    transition-delay: 0s;
 }
 
 .modal-content {
@@ -1152,6 +1174,8 @@ h4 {
     height: auto;
     max-width: 60%;
     width: 60%;
+
+
 }
 
 
